--- a/storefront-child/build_assets/scss/blocks/_checkout.scss
+++ b/storefront-child/build_assets/scss/blocks/_checkout.scss
@@ -797,6 +797,10 @@ tfoot .cart-subtotal {
     font-weight: 400;
     line-height: normal;
     letter-spacing: -0.32px;
+
+    &:focus {
+        outline: none !important;
+    }
 }
 .woocommerce-order{
     max-width: 1489px;
@@ -910,7 +914,7 @@ tfoot .cart-subtotal {
     transition: 0.25s;
     @media (min-width: 768px) {
         &:hover {
-            box-shadow: inset 0 0 0 2em $white !important;
+            box-shadow: inset 0 0 0 2em $mercury !important;
             color: $seaFoam;
         }
     }
