--- a/storefront-child/build_assets/scss/blocks/_text-image.scss
+++ b/storefront-child/build_assets/scss/blocks/_text-image.scss
@@ -45,6 +45,7 @@
        }
        p {
             margin-bottom: 20px;
+            color: black;
             a {
                 font-family: $montserrat;
                 font-weight: 400;
