--- a/storefront-child/build_assets/scss/blocks/_single-product.scss
+++ b/storefront-child/build_assets/scss/blocks/_single-product.scss
@@ -314,6 +314,7 @@
     }
 }
 .variations.active select {
+    background-color: white;
     @media (max-width: 450px) {
         font-size: 14px !important;
     }
@@ -909,6 +910,7 @@ input[type="tel"]:focus,input[type="email"]:focus{
             display: block;
             .credit-card-images {
                 opacity: 0;
+                z-index: -1;
             }
         }
     }
@@ -1002,23 +1004,12 @@ input[type="tel"]:focus,input[type="email"]:focus{
                 justify-content: center;
             }
         }
-        .checkout-button {
-            background-color: $seaFoam;
-            &:hover {
-                background-color: white;
-                color: black;
-            }
-            &:focus, &:active {
-                background-color: $seaFoam;
-                color: white;
-            }
-        }
         .hentry .entry-content a.button {
             margin-top: 10px;
             transition: 0.25s;
             @media (min-width: 768px) {
                 &:hover {
-                    box-shadow: inset 0 0 0 2em $mercury !important;
+                    box-shadow: inset 0 0 0 2em $white !important;
                     color: $seaFoam;
                 }
             }
@@ -1348,6 +1339,15 @@ bdi::before {
 
 .return-to-shop {
     height: 100vh;
+}
+
+.hentry .entry-content .return-to-shop a.button {
+    @media (min-width: 768px) {
+        &:hover {
+            box-shadow: inset 0 0 0 2em $mercury !important;
+            color: $seaFoam;
+        }
+    }
 }
 
 @media only screen and (max-width: 1200px){
