--- a/storefront-child/build_assets/scss/blocks/_baloon-columns.scss
+++ b/storefront-child/build_assets/scss/blocks/_baloon-columns.scss
@@ -467,7 +467,7 @@
             height: 494px !important;
             outline: none!important;
             border-radius: 40px;
-            transition: width 0.5s ease-in-out;
+            // transition: width 0.5s ease-in-out;
             @media (max-width: 1400px) {
                 width: 122px;
                 border-radius: 30px;
@@ -498,17 +498,38 @@
                 width: 66px;
             }
             img {
-                width: 100%;
+                width: 128px;
                 height: 100%;
                 object-fit: cover;
                 object-position: center center;
                 border-radius: 40px;
                 z-index: -1;
+                transition: width 0.5s ease-in-out !important;
+                @media (max-width: 1400px) {
+                    width: 122px;
+                }
+                @media (max-width: 1175px) {
+                    width: 102px;
+                }
                 @media (max-width: 1024px) {
+                    width: 93px;
                     border-radius: 30px;
                 }
+                @media (max-width: 915px) {
+                    width: 81px;
+                }
+                @media (max-width: 818px) {
+                    width: 72px;
+                }
+                @media (max-width: 776px) {
+                    width: 70px;
+                }
                 @media (max-width: 768px) {
+                    width: 68px;
                     border-radius: 20px;
+                }
+                @media (max-width: 766px) {
+                    width: 66px;
                 }
             }
 
@@ -545,6 +566,22 @@
                 @media (max-width: 768px) {
                     width: 384px;
                 }
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    object-position: center center;
+                    margin: 0 auto;
+                    border-radius: 40px;
+                    z-index: -1;
+                    @media (max-width: 1024px) {
+                        border-radius: 30px;
+                    }
+                    @media (max-width: 768px) {
+                        border-radius: 20px;
+                    }
+                }
             }
         }
 
@@ -558,37 +595,56 @@
         }
 
         &__slide.target {
-            width: 128px !important;
+            width: 744px !important;
             @media (max-width: 1400px) {
-                width: 122px !important;
+                width: 700px !important;
             }
-            @media (max-width: 1175px) {
-                width: 102px !important;
+            @media (max-width: 1330px) {
+                width: 630px !important;
+            }
+            @media (max-width: 1257px) {
+                width: 548px !important;
+            }
+            @media (max-width: 1100px) {
+                width: 470px !important;
             }
             @media (max-width: 1024px) {
-                width: 93px !important;
+                width: 482px !important;
             }
-            @media (max-width: 915px) {
-                width: 81px !important;
+            @media (max-width: 1000px) {
+                width: 448px !important;
             }
-            @media (max-width: 818px) {
-                width: 72px !important;
+            @media (max-width: 945px) {
+                width: 410px !important;
             }
-            @media (max-width: 776px) {
-                width: 70px !important;
+            @media (max-width: 863px) {
+                width: 362px !important;
             }
             @media (max-width: 768px) {
-                width: 68px !important;
+                width: 384px !important;
             }
-            @media (max-width: 766px) {
-                width: 66px !important;
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                object-position: center center;
+                border-radius: 40px;
+                z-index: -1;
+                transition: width 0.5s ease-in-out !important;
+                @media (max-width: 1024px) {
+                    border-radius: 30px;
+                }
+                @media (max-width: 768px) {
+                    border-radius: 20px;
+                }
             }
         }
         
         &__slide.slick-current {
             width: 744px;
             height: 494px;
-            transition: width 0.7s ease-in-out !important;
+            // transition: width 0.7s ease-in-out !important;
 
             @media (max-width: 1400px) {
                 width: 700px;
@@ -625,12 +681,29 @@
 
             &.current {
                 width: 128px;
-                transition: width 1s ease-in-out;
+                // transition: width 1s ease-in-out;
+            }
+
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                object-position: center center;
+                border-radius: 40px;
+                z-index: -1;
+                transition: width 0.5s ease-in-out !important;
+                @media (max-width: 1024px) {
+                    border-radius: 30px;
+                }
+                @media (max-width: 768px) {
+                    border-radius: 20px;
+                }
             }
         }
         .slick-slide {
             margin: 0 8px;
-            transition: width 0.7s ease-in-out;
+            // transition: width 0.7s ease-in-out;
             @media (max-width: 1000px) {
                 margin: 0 6px;
             }
