--- a/storefront-child/build_assets/scss/blocks/_baloon-columns.scss
+++ b/storefront-child/build_assets/scss/blocks/_baloon-columns.scss
@@ -418,7 +418,7 @@
         //     opacity: 0;
         //     pointer-events: none; /* Prevent interaction with hidden elements */
         // }
-        transition: opacity 0.4s ease-in-out;
+        // transition: opacity 0.4s ease-in-out;
         @media (max-width: 1330px) {
             max-width: 1180px;
             margin: 0 auto;
@@ -504,7 +504,6 @@
                 object-position: center center;
                 border-radius: 40px;
                 z-index: -1;
-                transition: width 0.5s ease-in-out !important;
                 @media (max-width: 1400px) {
                     width: 122px;
                 }
@@ -575,6 +574,7 @@
                     margin: 0 auto;
                     border-radius: 40px;
                     z-index: -1;
+                    transition: width 0.5s ease-in-out !important;
                     @media (max-width: 1024px) {
                         border-radius: 30px;
                     }
@@ -595,6 +595,54 @@
         }
 
         &__slide.target {
+            width: 744px !important;
+            @media (max-width: 1400px) {
+                width: 700px !important;
+            }
+            @media (max-width: 1330px) {
+                width: 630px !important;
+            }
+            @media (max-width: 1257px) {
+                width: 548px !important;
+            }
+            @media (max-width: 1100px) {
+                width: 470px !important;
+            }
+            @media (max-width: 1024px) {
+                width: 482px !important;
+            }
+            @media (max-width: 1000px) {
+                width: 448px !important;
+            }
+            @media (max-width: 945px) {
+                width: 410px !important;
+            }
+            @media (max-width: 863px) {
+                width: 362px !important;
+            }
+            @media (max-width: 768px) {
+                width: 384px !important;
+            }
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                object-position: center center;
+                border-radius: 40px;
+                margin: 0 auto;
+                z-index: -1;
+                transition: width 0.5s ease-in-out !important;
+                @media (max-width: 1024px) {
+                    border-radius: 30px;
+                }
+                @media (max-width: 768px) {
+                    border-radius: 20px;
+                }
+            }
+        }
+
+        &__slide.target-back {
             width: 744px !important;
             @media (max-width: 1400px) {
                 width: 700px !important;
