--- a/storefront-child/build_assets/scss/blocks/_header.scss
+++ b/storefront-child/build_assets/scss/blocks/_header.scss
@@ -603,116 +603,134 @@
                         margin-bottom: 8px;
                     }
                 }
-
-                .product-container{
+                .products-container{
                     display: flex;
-    
-                    .product-name {
-                        display: none;
-                        margin-right: 24px;
-                        width: 136px;
-    
-                        &__image {
-                            height: 136px;
-                            width: 136px;
-                            border-radius: 12px;
-                            position: relative;
-                            @media (max-height: 450px) {
-                                height: 110px;
-                                width: 110px;
-                                margin-left: 13px;
-                            }
+                    .product-container{
+                        display: flex;
+                        gap: 24px;
+                        width: 79%;
+                        -webkit-overflow-scrolling: touch;
+                        overflow: auto;
 
-                            &__img {
+                        @media (max-width: 768px) {
+                            width: 73%;
+                            -webkit-overflow-scrolling: auto !important;
+                        }
+
+                        @media (max-width: 450px) {
+                            width: 58%;
+                            -webkit-overflow-scrolling: auto !important;
+                        }
+        
+                        .product-name {
+                            flex: 0 0 auto;
+                            display: none;
+                            width: 136px;
+                            margin-bottom: 20px;
+        
+                            &__image {
                                 height: 136px;
                                 width: 136px;
                                 border-radius: 12px;
-                                background-position: center center;
-                                background-size: cover;
-                                position: absolute;
-                                z-index: 1;
-                                top: 0;
-                                left: 0;
-                                right: 0;
-                                bottom: 0;
+                                position: relative;
                                 @media (max-height: 450px) {
                                     height: 110px;
                                     width: 110px;
+                                    margin-left: 13px;
                                 }
-                            }
 
-                            p {
-                                position: absolute;
-                                top: 50%;
-                                left: 50%;
-                                transform: translate(-50%, -50%);
-                                z-index: 0;
-                                font-size: 12px;
-                                font-weight: 500;
-                                width: 60%;
-                                color: white;
-                                opacity: 0;
-                                transition: 0.5s ease opacity;
-                                @media (max-height: 450px) {
-                                    padding: 9px 12px;
+                                &__img {
+                                    height: 136px;
+                                    width: 136px;
+                                    border-radius: 12px;
+                                    background-position: center center;
+                                    background-size: cover;
+                                    position: absolute;
+                                    z-index: 1;
+                                    top: 0;
+                                    left: 0;
+                                    right: 0;
+                                    bottom: 0;
+                                    @media (max-height: 450px) {
+                                        height: 110px;
+                                        width: 110px;
+                                    }
                                 }
-                                &:hover {
-                                    color: black;
-                                }
-                            }
 
-                            &:hover {
                                 p {
-                                    z-index: 2;
-                                    opacity: 1;
+                                    position: absolute;
+                                    top: 50%;
+                                    left: 50%;
+                                    transform: translate(-50%, -50%);
+                                    z-index: 0;
+                                    font-size: 12px;
+                                    font-weight: 500;
+                                    width: 60%;
+                                    color: white;
+                                    opacity: 0;
+                                    transition: 0.5s ease opacity;
+                                    @media (max-height: 450px) {
+                                        padding: 9px 12px;
+                                    }
+                                    &:hover {
+                                        color: black;
+                                    }
                                 }
+
+                                &:hover {
+                                    p {
+                                        z-index: 2;
+                                        opacity: 1;
+                                    }
+                                }
+
+                                // .badge-container {
+                                //     position: absolute;
+                                //     z-index: 2;
+                                //     width: fit-content;
+                                //     position: absolute;
+                                //     bottom: 15px;
+                                //     left: 50%; /* Position at 50% from the left */
+                                //     transform: translate(-50%);
+
+                                //     .badge {
+                                //         padding: 3px 6px;
+                                //         font-size: 9px;
+                                //         background-color: $mercury;
+                                //         border-radius: 44px;
+                                //         font-weight: 400;
+                                //         color: $black;
+                                //         margin-right: 8px;
+
+                                //         &:last-child {
+                                //             margin-right: 0px;
+                                //         }
+                                //     }
+
+                                // }
                             }
-
-                            // .badge-container {
-                            //     position: absolute;
-                            //     z-index: 2;
-                            //     width: fit-content;
-                            //     position: absolute;
-                            //     bottom: 15px;
-                            //     left: 50%; /* Position at 50% from the left */
-                            //     transform: translate(-50%);
-
-                            //     .badge {
-                            //         padding: 3px 6px;
-                            //         font-size: 9px;
-                            //         background-color: $mercury;
-                            //         border-radius: 44px;
-                            //         font-weight: 400;
-                            //         color: $black;
-                            //         margin-right: 8px;
-
-                            //         &:last-child {
-                            //             margin-right: 0px;
-                            //         }
-                            //     }
-
-                            // }
-                        }
-        
-                        h2 {
-                            font-size: 13px;
-                            font-weight: 600;
-                            text-align: center;
-                            margin-top: 8px;
-                        }
-        
-                        &__price {
-                            font-family: $montserrat;
-                            font-size: 10px;
-                            font-weight: 400;
-                            display: flex;
-                            align-items: center;
-                            justify-content: center;
+            
+                            h2 {
+                                font-size: 13px;
+                                font-weight: 600;
+                                text-align: center;
+                                margin-top: 8px;
+                            }
+            
+                            &__price {
+                                font-family: $montserrat;
+                                font-size: 10px;
+                                font-weight: 400;
+                                display: flex;
+                                align-items: center;
+                                justify-content: center;
+                            }
                         }
                     }
-    
+
                     .button-container {
-    
+                        margin-left: 20px;
+        
                         a {
                             margin-top: 60px;
                             display: none;
@@ -724,6 +742,37 @@
                             }
                         }
                     }
+                }
+
+
+                /* Style for scrollbar */
+                .product-container::-webkit-scrollbar {
+                    width: 5px; /* Set the width of the scrollbar */
+                    border-radius: 8px;
+                    height: 10px;
+                    display: block !important;
+                }
+
+                /* Track styles */
+                .product-container::-webkit-scrollbar-track {
+                    background: $mercury; /* Set the color of the track */
+                    border-radius: 8px;
+                    width: 5px;
+                    height: 10px;
+                }
+
+                /* Handle styles */
+                .product-container::-webkit-scrollbar-thumb {
+                    background: $seaFoam; /* Set the color of the handle */
+                    border-radius: 8px;
+                    width: 5px;
+                    height: 10px;
+                }
+
+                /* Handle on hover */
+                .product-container::-webkit-scrollbar-thumb:hover {
+                    background: $seaFoam; /* Set the color of the handle on hover */
+                    border-radius: 8px;
                 }
 
                 .pages-container {
