--- a/storefront-child/build_assets/scss/blocks/_get-a-quote.scss
+++ b/storefront-child/build_assets/scss/blocks/_get-a-quote.scss
@@ -105,6 +105,7 @@
                     margin-top: 24px;
                     @media (max-width: 650px) {
                         margin-top: 0;
+                        margin-right: 0;
                     }
                 }
             }
