--- a/storefront-child/build_assets/scss/blocks/_shop.scss
+++ b/storefront-child/build_assets/scss/blocks/_shop.scss
@@ -4,14 +4,25 @@
     @media (max-width: $tablet) {
         margin-bottom: 64px;
     }
+    .delivery-banner {
+        width: 100%;
+        margin-top: 96px;
+        position: fixed;
+        z-index: 60;
+    }
     .breadcrumb {
-        padding: 72px 0 32px;
+        padding: 218px 0 32px;
         @media (max-width: $tablet) {
-            padding: 64px 0 40px;
+            padding: 210px 0 40px;
         }
         @media (max-width: $mobile) {
-            padding: 32px 0 40px;
+            padding: 195px 0 40px;
         }
+
+        @media (max-width: 342px) {
+            padding: 215px 0 40px;
+        }
+
         &__wrapper {
             a {
                 &:last-of-type {
